@@ -1,3 +1,7 @@
+2017-11-12  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed bug with incorrect entry titles in icon view and multiple entry icons (Bug 386548).
+
 2017-11-06  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug for "losing" icons after modifying a collection (Bug 386549).
